修改：     robot_planning/CMakeLists.txt 	修改：     robot_planning/include/robot_planning/robot_planning.h 	修改：     robot_planning/src/robot_arm_test.cpp 	修改：     robot_planning/src/robot_planning.cpp 	修改：     usart_port/CMakeLists.txt 	修改：     usart_port/package.xml 	修改：     usart_port/src/linux_serial.cpp 	修改：     usart_port/src/linux_serial.h 	修改：     usart_port/src/publish_node.cpp 	修改：     usart_port/src/tags

--- a/robot_planning/CMakeLists.txt
+++ b/robot_planning/CMakeLists.txt
@@ -11,12 +11,12 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_msgs
   actionlib
-  arbotix_msgs
+  #arbotix_msgs
   control_msgs
 )
 include_directories(
   include ${catkin_INCLUDE_DIRS}
-  $ENV{HOME}/baxter_ws/devel/include
+  #$ENV{HOME}/baxter_ws/devel/include
   include 
   $ENV{HOME}/robot_ws/devel/include
   ${catkin_INCLUDE_DIRS} 
